Feature/Clase_validaciones_Y_validacion_en_tests

--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e9cf90">  <td>24/10/02 17:32:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccessAccount.AccessIdAccount()[pri:0, instance:com.enviopack.tests.AccessAccount@4f32a3ad]">AccessIdAccount</td> 
-  <td>main@1921242091</td>   <td></td> </tr>
-<tr bgcolor="98c7fe">  <td>24/10/02 17:32:51</td>   <td>-4564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.enviopack.tests.AccessAccount@4f32a3ad]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1921242091</td>   <td></td> </tr>
-<tr bgcolor="98c7fe">  <td>24/10/02 17:33:00</td>   <td>4900</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.enviopack.tests.AccessAccount@4f32a3ad]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1921242091</td>   <td></td> </tr>
+<tr bgcolor="e9cf90">  <td>24/10/04 15:50:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginAdmin()[pri:0, instance:com.enviopack.tests.LoginTest@6c4906d3]">loginAdmin</td> 
+  <td>main@1399701152</td>   <td></td> </tr>
+<tr bgcolor="e9cf90">  <td>24/10/04 15:50:49</td>   <td>12295</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginSeller()[pri:0, instance:com.enviopack.tests.LoginTest@6c4906d3]">loginSeller</td> 
+  <td>main@1399701152</td>   <td></td> </tr>
+<tr bgcolor="98c7fe">  <td>24/10/04 15:50:43</td>   <td>6093</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.enviopack.tests.LoginTest@6c4906d3]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1399701152</td>   <td></td> </tr>
+<tr bgcolor="98c7fe">  <td>24/10/04 15:50:43</td>   <td>6093</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.enviopack.tests.LoginTest@6c4906d3]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1399701152</td>   <td></td> </tr>
+<tr bgcolor="98c7fe">  <td>24/10/04 15:50:54</td>   <td>17739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.enviopack.tests.LoginTest@6c4906d3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1399701152</td>   <td></td> </tr>
+<tr bgcolor="98c7fe">  <td>24/10/04 15:50:54</td>   <td>17739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.enviopack.tests.LoginTest@6c4906d3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1399701152</td>   <td></td> </tr>
 </table>
