--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Access Account Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">16.188</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Login Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">24.920</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Access Account Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">14.539</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">3</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">39.459</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Access Account Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.enviopack.tests.AccessAccount</td><td><a href="#m0">AccessIdAccount</a></td><td rowspan="1">1728068248690</td><td rowspan="1">10387</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.enviopack.tests.LoginTest</td><td><a href="#m0">loginAdmin</a></td><td rowspan="1">1728069133845</td><td rowspan="1">5592</td></tr><tr class="passedeven"><td><a href="#m1">loginSeller</a></td><td rowspan="1">1728069146156</td><td rowspan="1">5513</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Access Account Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.enviopack.tests.AccessAccount</td><td><a href="#m2">AccessIdAccount</a></td><td rowspan="1">1728069156571</td><td rowspan="1">9567</td></tr></tbody>
 </table>
-<h2>Access Account Test</h2><h3 id="m0">com.enviopack.tests.AccessAccount#AccessIdAccount</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>5710</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Login Test</h2><h3 id="m0">com.enviopack.tests.LoginTest#loginAdmin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.enviopack.tests.LoginTest#loginSeller</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Access Account Test</h2><h3 id="m2">com.enviopack.tests.AccessAccount#AccessIdAccount</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>5710</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
