--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a2b896">  <td>24/10/04 15:57:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccessAccount.AccessIdAccount(java.lang.String)[pri:0, instance:com.enviopack.tests.AccessAccount@6f53b8a]">AccessIdAccount</td> 
-  <td>main@1058876963</td>   <td></td> </tr>
-<tr bgcolor="6a81b5">  <td>24/10/04 15:57:23</td>   <td>-5292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.enviopack.tests.AccessAccount@6f53b8a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
-<tr bgcolor="6a81b5">  <td>24/10/04 15:57:39</td>   <td>10419</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.enviopack.tests.AccessAccount@6f53b8a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="9e9475">  <td>24/10/04 16:12:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccessAccount.AccessIdAccount(java.lang.String)[pri:0, instance:com.enviopack.tests.AccessAccount@66ea810]">AccessIdAccount</td> 
+  <td>main@193388045</td>   <td></td> </tr>
+<tr bgcolor="a2b896">  <td>24/10/04 16:12:13</td>   <td>-22726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginAdmin()[pri:0, instance:com.enviopack.tests.LoginTest@4f32a3ad]">loginAdmin</td> 
+  <td>main@193388045</td>   <td></td> </tr>
+<tr bgcolor="a2b896">  <td>24/10/04 16:12:26</td>   <td>-10415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginSeller()[pri:0, instance:com.enviopack.tests.LoginTest@4f32a3ad]">loginSeller</td> 
+  <td>main@193388045</td>   <td></td> </tr>
+<tr bgcolor="6a81b5">  <td>24/10/04 16:12:21</td>   <td>-14868</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.enviopack.tests.LoginTest@4f32a3ad]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@193388045</td>   <td></td> </tr>
+<tr bgcolor="6a81b5">  <td>24/10/04 16:12:21</td>   <td>-14868</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.enviopack.tests.LoginTest@4f32a3ad]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@193388045</td>   <td></td> </tr>
+<tr bgcolor="6a81b5">  <td>24/10/04 16:12:32</td>   <td>-4516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.enviopack.tests.AccessAccount@66ea810]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@193388045</td>   <td></td> </tr>
+<tr bgcolor="6a81b5">  <td>24/10/04 16:12:31</td>   <td>-4901</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.enviopack.tests.LoginTest@4f32a3ad]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@193388045</td>   <td></td> </tr>
+<tr bgcolor="6a81b5">  <td>24/10/04 16:12:31</td>   <td>-4901</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.enviopack.tests.LoginTest@4f32a3ad]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@193388045</td>   <td></td> </tr>
+<tr bgcolor="6a81b5">  <td>24/10/04 16:12:46</td>   <td>9570</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.enviopack.tests.AccessAccount@66ea810]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@193388045</td>   <td></td> </tr>
 </table>
